--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.1",
     "@types/express-handlebars": "^0.0.33",
     "mysql2": "^1.7.0",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "sequelize": "^5.19.6"
   }
 }
